@@ -27,12 +27,20 @@ import org.eclipse.swt.custom.CBanner;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Shell;
+import org.eclipse.ui.IViewPart;
+import org.eclipse.ui.IWorkbenchPage;
+import org.eclipse.ui.PartInitException;
 import org.eclipse.ui.application.ActionBarAdvisor;
 import org.eclipse.ui.application.IActionBarConfigurer;
 import org.eclipse.ui.application.IWorkbenchWindowConfigurer;
 import org.eclipse.ui.application.WorkbenchWindowAdvisor;
 import org.eclipse.ui.internal.keys.BindingService;
 import org.eclipse.ui.keys.IBindingService;
+import org.netxms.client.NXCSession;
+import org.netxms.client.objects.AbstractObject;
+import org.netxms.client.objects.Dashboard;
+import org.netxms.ui.eclipse.shared.ConsoleSharedData;
+import org.netxms.ui.eclipse.tools.MessageDialogHelper;
 
 /**
  * Workbench window advisor
@@ -111,6 +119,61 @@ public class ApplicationWorkbenchWindowAdvisor extends WorkbenchWindowAdvisor
 	}
 
 	/* (non-Javadoc)
+	 * @see org.eclipse.ui.application.WorkbenchWindowAdvisor#postWindowOpen()
+	 */
+	@Override
+   public void postWindowOpen()
+   {
+      String dashboardId = RWT.getRequest().getParameter("dashboard"); //$NON-NLS-1$
+      if (dashboardId != null)
+         showDashboard(dashboardId);
+   }
+    
+	/**
+	 * Show dashboard
+	 * 
+	 * @param dashboardId
+	 */
+	private void showDashboard(String dashboardId)
+	{
+      NXCSession session = (NXCSession)ConsoleSharedData.getSession();
+      
+      long objectId;
+      try
+      {
+         objectId = Long.parseLong(dashboardId);
+      }
+      catch(NumberFormatException e)
+      {
+         AbstractObject object = session.findObjectByName(dashboardId);
+         if ((object == null) || !(object instanceof Dashboard))
+         {
+            MessageDialogHelper.openError(null, "Error", String.format("Cannot open dashboard %s (invalid dashboard ID)", dashboardId));
+            return;
+         }
+         objectId = object.getObjectId();
+      }
+      
+      Dashboard dashboard = (Dashboard)session.findObjectById(objectId, Dashboard.class);
+      if (dashboard == null)
+      {
+         MessageDialogHelper.openError(null, "Error", String.format("Cannot open dashboard %s (invalid dashboard ID)", dashboardId));
+         return;
+      }
+      
+      IWorkbenchPage page = getWindowConfigurer().getWindow().getActivePage();
+      try
+      {
+         IViewPart view = page.showView("org.netxms.ui.eclipse.dashboard.views.DashboardView", Long.toString(objectId), IWorkbenchPage.VIEW_ACTIVATE); //$NON-NLS-1$
+         page.setPartState(page.getReference(view), IWorkbenchPage.STATE_MAXIMIZED);
+      }
+      catch(PartInitException e)
+      {
+         MessageDialogHelper.openError(null, "Error", String.format("Cannot open dashboard %s (%s)", dashboardId, e.getLocalizedMessage()));
+      }
+   }
+
+   /* (non-Javadoc)
 	 * @see org.eclipse.ui.application.WorkbenchWindowAdvisor#postWindowClose()
 	 */
 	@Override
